<resources>
    <string name="app_name">SDfood</string>
    <!--主页的Activity的抽屉布局的menu的文字-->
    <string name="activity_main_dl_headview_login">注册/登录</string>
    <string name="activity_main_dl_menu_doucument">历史浏览</string>
    <string name="activity_main_dl_menu_star">我的收藏</string>
    <string name="activity_main_dl_menu_private">我的动态</string>
    <string name="activity_main_dl_menu_sensor">Megcook智能灶</string>
    <string name="activity_main_dl_menu_settings">设置</string>
    <!--主页的Activity的RadioGroup的文字-->
    <string name="activity_bottom_rgb_home">西顿</string>
    <string name="activity_bottom_rgb_visible">发现</string>
    <string name="activity_bottom_rgb_msg">消息</string>
    <string name="activity_bottom_rgb_mine">我</string>
    <string name="activity_bottom_rgb_like">我的</string>
    <string name="fragment_home_hot_catagroies">热门标签</string>
    <string name="fragment_home_newuser">西顿厨友</string>
    <string name="fragment_hoem_gueesLike">猜你喜欢</string>
    <string name="fragment_hoem_gueesLike_discuss">向左滑动可评论和收藏也~</string>
    <string name="fragment_home_staple">糕点主食</string>
    <string name="fragment_home_staple_style">甜点扑向</string>
    <string name="fragment_home_porridge">汤粥</string>
    <string name="fragment_home_porridge_style">七宝美味</string>
    <string name="fragment_home_hotfood">热菜</string>
    <string name="fragment_home_hotfood_style">冷拼热炒</string>
    <string name="fragment_home_snacks">小吃</string>
    <string name="fragment_home_snacks_style">唇齿留香</string>
    <!--菜系的activity的文字-->
    <string name="activity_caixi_detail_collectcount">个收藏</string>
    <string name="activity_caixi_detail_hitscount">次阅读</string>
    <string name="activity_caixi_detail_empty_text">空</string>
    <!--菜系详情的activity的文字-->
    <string name="activity_megbook_head_focus">关注</string>
    <string name="activity_megbook_head_taste">口味</string>
    <string name="activity_megbook_head_kitchen">厨具</string>
    <string name="activity_megbook_head_time">用时</string>
    <string name="activity_megbook_head_partice">做法</string>
    <string name="activity_megbook_head_diff">难度</string>
    <string name="activity_megbook_detail_steps_temp">温度:0℃</string>
    <string name="activity_megbook_detail_steps_time">时间:0秒</string>
    <string name="activity_megbook_detail_steps_production_steps">制作步骤</string>
    <string name="activity_megbook_detail_steps_production_steps_big">点击步骤可以看大图哦</string>
    <string name="activity_food_detail_down">下载</string>
    <string name="activity_food_detail_disc">评论</string>
    <string name="activity_food_detail_sure">赞</string>
    <string name="activity_food_detail_restore">收藏</string>

    <!--登录的activity的文字-->
    <string name="activity_login_head_mid_text">登录</string>
    <string name="activity_login_region_tv">注册</string>
    <string name="activity_login_num_tv">账号</string>
    <string name="activity_login_pwd_tv">密码</string>
    <string name="activity_login_et_number">手机号码</string>
    <string name="activity_login_et_pwd">登录密码</string>
    <string name="activity_login_now_login">立即登录</string>
    <string name="activity_login_forget_pwd">忘记密码？</string>
    <!--注册的activity的文字-->
    <string name="activity_reg_head_mid_text">西顿美食</string>
    <string name="activity_reg_region_top">加入西顿美食大家庭</string>
    <string name="activity_reg_et_phone">手机号码</string>
    <string name="activity_reg_et_nick">昵称</string>
    <string name="activity_reg_et_pwd">密码</string>
    <string name="activity_reg_et_ask">邀请码( 选填 )</string>
    <string name="activity_reg_tv_reg">加入西顿美食</string>
    <string name="activity_reg_tv_agree">点击注册，即表示你同意我们的服务条款和隐私政策</string>
    <string name="activity_reg_tv_member">已经是我们的会员？</string>
    <string name="activity_reg_tv_login">登录</string>
    <string name="activity_reg_tl_phone_error">用户名长度为11位</string>
    <string name="activity_reg_tl_nickname_error">昵称的长度为2-10位</string>
    <string name="activity_reg_tl_pwd_error">密码长度为6-20为字母和数字的组合</string>
    <string name="activity_reg_tl_ask_error">邀请码的长度为9位</string>
    <!--发现的fragment的文字-->
    <string name="fragment_discover_price">￥</string>
    <string name="fragment_discover_salecount">人购买</string>
    <string name="fragment_discover_head_text">发现</string>
    <!--消息的fragment的文字-->
    <string name="fragment_msg_head_text">消息</string>
    <string name="fragment_msg_fan">新的粉丝</string>
    <string name="fragment_msg_like">新的赞</string>
    <string name="fragment_msg_comm">新的评论</string>
    <string name="fragment_msg_poke">新的戳</string>
    <string name="fragment_msg_mess">通知</string>
    <!--我的fragment的文字-->
    <string name="fragment_mine_search_hint_text">菜谱,食材搜索</string>
    <string name="fragment_mine_head_login">点击登录</string>
    <string name="fragment_mine_head_count">0</string>
    <string name="fragment_mine_head_focus">关注</string>
    <string name="fragment_mine_head_fan">粉丝</string>
    <string name="fragment_mine_head_parise">被赞</string>
    <string name="fragment_mine_head_visit">访客</string>
    <string name="fragment_mine_user_center_score">积分</string>
    <string name="fragment_mine_user_center_score_mid">半途而费是最大的悲哀，赶紧签到吧</string>
    <string name="fragment_mine_user_center_recipe">菜谱</string>
    <string name="fragment_mine_user_center_works">作品</string>
    <string name="fragment_mine_user_center_pat">随拍</string>
    <string name="fragment_mine_user_center_draft">草稿箱</string>
    <string name="fragment_mine_user_center_order">我的订单</string>
    <string name="fragment_mine_user_center_coupons">优惠卷</string>
    <string name="fragment_mine_user_center_address">收货地址</string>
</resources>
