<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:drawableLeft="@drawable/icon_share"
        android:text="@string/activity_food_detail_down"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <TextView
        android:drawableLeft="@drawable/icon_comment"
        android:text="@string/activity_food_detail_disc"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <TextView
        android:drawableLeft="@drawable/icon_like"
        android:text="@string/activity_food_detail_sure"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <TextView
        android:drawableLeft="@drawable/icon_collect"
        android:text="@string/activity_food_detail_restore"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
</LinearLayout>