<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment__home_sweet_recommend_tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_staple" />

        <TextView
            android:id="@+id/fragment__home_sweet_recommend_tvdescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_staple_style" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/fragment__home_sweet_recommend_imageurl"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment__home_sweet_breakfast_tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_porridge" />

            <TextView
                android:id="@+id/fragment__home_sweet_breakfast_tvdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_porridge_style" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/fragment__home_sweet_breakfast_imageurl"
                android:layout_width="100dp"
                android:layout_height="100dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment__home_sweet_lunch_tvname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_hotfood" />

                <TextView
                    android:id="@+id/fragment__home_sweet_lunch_tvdescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_hotfood_style" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/fragment__home_sweet_lnuch_imageurl"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment__home_sweet_dinner_tvname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_snacks" />

                <TextView
                    android:id="@+id/fragment__home_sweet_dinner_tvdescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_snacks_style" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/fragment__home_sweet_dinner_imageurl"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>