<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y35"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragment_common_headview_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_ab_back_mtrl_am_alpha" />

            <TextView
                android:id="@+id/fragment_login_headview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/y20"
                android:text="@string/activity_reg_head_mid_text"
                android:textSize="@dimen/fragment_msg_big_textsize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_reg_region_top" />
            <!--手机号码-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_register_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_activity_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_reg_et_phone"
                    android:maxLength="11"
                    android:phoneNumber="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--昵称-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_register_nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_activity_register_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_reg_et_nick"
                    android:inputType="text"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--密码-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_register_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_activity_register_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_reg_et_pwd"
                    android:inputType="numberPassword"
                    android:password="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--邀请码-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_register_invitecode"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_activity_register_invitecode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_reg_et_ask"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--立即登录-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y33"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_caixi_detail_empty_text"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/y33"
                    android:layout_weight="8"
                    android:orientation="horizontal">
                    <!--立即登录-->
                    <TextView
                        android:id="@+id/tv_activity_login_now"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/y33"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/activity_reg_tv_reg"
                        android:textSize="@dimen/fragment_home_view_head_word" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activity_reg_tv_agree" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_reg_tv_member" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_reg_tv_login"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>
