<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y8"
        android:paddingTop="@dimen/y8">

        <TextView
            android:id="@+id/ll_activity_login_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="@dimen/x10"
            android:text="@string/activity_login_num_tv"
            android:textColor="@color/activityBottomTextUnCheckColor"
            android:textSize="@dimen/fragment_home_view_hot_categories_wordsecond" />

        <EditText
            android:id="@+id/ll_activity_login_et"
            android:layout_width="0dp"
            android:hint="@string/activity_login_et_number"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:textColor="@color/activityBottomTextUnCheckColor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y8"
        android:paddingTop="@dimen/y8">

        <TextView
            android:id="@+id/ll_activity_login_tv_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="@dimen/x10"
            android:text="@string/activity_login_pwd_tv"
            android:textColor="@color/activityBottomTextUnCheckColor"
            android:textSize="@dimen/fragment_home_view_hot_categories_wordsecond" />

        <EditText
            android:id="@+id/ll_activity_login_et_pwd"
            android:hint="@string/activity_login_et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:textColor="@color/activityBottomTextUnCheckColor" />
    </LinearLayout>
</LinearLayout>