<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/activiy_home_radiogp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y68"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="0dp">

            <RadioButton
                android:id="@+id/activiy_radiobtn_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_activity_bottom_home"
                android:gravity="center"
                android:text="@string/activity_bottom_rgb_home"
                android:textColor="@drawable/selector_activity_bottom_word_color" />

            <RadioButton
                android:id="@+id/activiy_radiobtn_visible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_activity_bottom_visible"
                android:gravity="center"
                android:text="@string/activity_bottom_rgb_visible"
                android:textColor="@drawable/selector_activity_bottom_word_color" />

            <RadioButton
                android:id="@+id/activiy_radiobtn_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_activity_bottom_msg"
                android:gravity="center"
                android:text="@string/activity_bottom_rgb_msg"
                android:textColor="@drawable/selector_activity_bottom_word_color" />

            <RadioButton
                android:id="@+id/activiy_radiobtn_mine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_activity_bottom_mine"
                android:gravity="center"
                android:text="@string/activity_bottom_rgb_mine"
                android:textColor="@drawable/selector_activity_bottom_word_color" />

            <RadioButton
                android:id="@+id/activiy_radiobtn_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_activity_bottom_msg"
                android:gravity="center"
                android:text="@string/activity_bottom_rgb_like"
                android:textColor="@drawable/selector_activity_bottom_word_color"
                android:visibility="invisible" />
        </RadioGroup>
    </LinearLayout>
</layout>