<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_home_head_bg_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/y40">

            <ImageView
                android:id="@+id/fragment_mine_login_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/common_bg_avatar_loadfail" />

            <TextView
                android:id="@+id/fragment_mine_login_tv"
                android:layout_marginTop="@dimen/x10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_mine_head_login" />

            <LinearLayout
                android:layout_marginBottom="@dimen/y10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y30"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_count" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_focus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_count" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_fan" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_count" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_parise" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_count" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_mine_head_visit" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">


            <!--积分-->
            <com.wang.sdfood.custem.ActivityMegbookLVView
                android:id="@+id/lv_fragment_mine_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/x10"
                android:background="@color/fragment_home_view_bgcolor">


            </com.wang.sdfood.custem.ActivityMegbookLVView>
            <!--菜谱-->
            <com.wang.sdfood.custem.ActivityMegbookLVView
                android:id="@+id/lv_fragment_mine_recipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/x10"
                android:background="@color/fragment_home_view_bgcolor">


            </com.wang.sdfood.custem.ActivityMegbookLVView>
            <!--订单-->
            <com.wang.sdfood.custem.ActivityMegbookLVView
                android:id="@+id/lv_fragment_mine_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/x10"
                android:background="@color/fragment_home_view_bgcolor">


            </com.wang.sdfood.custem.ActivityMegbookLVView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>